--- a/GRUnlocker/Properties/Resources.resx
+++ b/GRUnlocker/Properties/Resources.resx
@@ -130,6 +130,54 @@
   <data name="FullUnlockedList" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\patch.sav;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="Ghostrunner_hc_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Ghostrunner_hc_1.sav;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="Ghostrunner_hc_10" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Ghostrunner_hc_10.sav;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="Ghostrunner_hc_11" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Ghostrunner_hc_11.sav;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="Ghostrunner_hc_12" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Ghostrunner_hc_12.sav;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="Ghostrunner_hc_13" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Ghostrunner_hc_13.sav;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="Ghostrunner_hc_14" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Ghostrunner_hc_14.sav;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="Ghostrunner_hc_15" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Ghostrunner_hc_15.sav;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="Ghostrunner_hc_16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Ghostrunner_hc_16.sav;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="Ghostrunner_hc_2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Ghostrunner_hc_2.sav;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="Ghostrunner_hc_3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Ghostrunner_hc_3.sav;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="Ghostrunner_hc_4" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Ghostrunner_hc_4.sav;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="Ghostrunner_hc_5" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Ghostrunner_hc_5.sav;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="Ghostrunner_hc_6" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Ghostrunner_hc_6.sav;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="Ghostrunner_hc_7" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Ghostrunner_hc_7.sav;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="Ghostrunner_hc_8" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Ghostrunner_hc_8.sav;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="Ghostrunner_hc_9" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Ghostrunner_hc_9.sav;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="Ghostrunner_lvl1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Ghostrunner_lvl1.sav;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
@@ -180,6 +228,9 @@
   </data>
   <data name="Hundo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Hundo.sav;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="hundoHC" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\hundoHC.sav;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="Levels" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Levels.sav;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
