--- a/GRUnlocker/Properties/Resources.resx
+++ b/GRUnlocker/Properties/Resources.resx
@@ -232,6 +232,9 @@
   <data name="hundoHC" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\hundoHC.sav;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="KRFull" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\KRFull.sav;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="Levels" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Levels.sav;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
@@ -240,6 +243,9 @@
   </data>
   <data name="Newgame_collectiables" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Newgame_collectiables.sav;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="NGKR" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\NGKR.sav;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="SwordsData" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\SwordsData.sav;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
